--- a/index.html
+++ b/index.html
@@ -35,12 +35,32 @@
             <section style="background-color: cyan;">
             <article>
                 <h1 style="color: indianred;">Información de los productos</h1>
+
                 <img src="descarga (1).jpg" style="width: 250px; height: 250px;">
                 <img src="descarga (2).jfif" style="width: 250px; height: 250px;">
-                <img src="descarga (3).jfif" style="width: 250px; height: 250px;">
+                <img:hover {filter: saturate(180%)src="descarga (3).jfif" style="width: 250px; height: 250px;">
             </article>
-            </section>
-
+        </section>
+        <style>
+            ul{
+                list-style-type: lower-alpha;
+                margin: 0cm;
+                padding: 10%;
+            }
+        </style>
+        <section>
+          
+            <ul>
+                <li><a href="default.asp">Home</a></li>
+                <li><a href="news.asp">News</a></li>
+                <li><a href="contact.asp">Contact</a></li>
+                <li><a href="about.asp">About</a></li>
+              </ul>
+            li a {
+                display: block;
+                width: 60px;
+              }
+        </section>
             <section style="background-color: bisque;">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut earum impedit culpa sunt velit accusantium nemo possimus pariatur nisi? Esse libero sint qui reiciendis quis dolorum laudantium ipsam, et facilis!</p>
             </section>
